--- a/src/app/landing-page/main-page/abilities/abilities.component.html
+++ b/src/app/landing-page/main-page/abilities/abilities.component.html
@@ -1,1 +1,31 @@
-<p>abilities works!</p>
+<section>
+
+    <h2>My Skills</h2>
+   <div>
+
+       <span>
+           <img src="../../../../assets/icon/MySkill/Angular.png" alt="">
+           <img src="../../../../assets/icon/MySkill/TS.png" alt="">
+           <img src="../../../../assets/icon/MySkill/JS.png" alt="">
+           <img src="../../../../assets/icon/MySkill/HTML.png" alt="">
+           <img src="../../../../assets/icon/MySkill/CSS.png" alt="">
+           <img src="../../../../assets/icon/MySkill/Api.png" alt="">
+           <img src="../../../../assets/icon/MySkill/Firebase.png" alt="">
+           <img src="../../../../assets/icon/MySkill/GIT.png" alt="">
+           <img src="../../../../assets/icon/MySkill/Meterial-Design.png" alt="">
+           <img src="../../../../assets/icon/MySkill/Scrum.png" alt="">
+        </span>
+       
+        <div>
+            
+            <img src="./../../../../assets/icon/MySkill/Ellipse 25.png" alt="">
+            
+            
+            <span>
+
+            </span>
+        </div>   
+    </div>
+
+
+</section>
