--- a/src/app/landing-page/main-page/about-me/about-me.component.html
+++ b/src/app/landing-page/main-page/about-me/about-me.component.html
@@ -1,1 +1,16 @@
-<p>about-me works!</p>
+<div>
+    <section>
+        <h2>Why me</h2>
+        <div class="section-text">
+            <img src="../../../../assets/icon/icon1.png" alt="" />
+            <img src="" alt="">
+                <p> <span>I am</span> located in Stockach</p>
+            <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt vel
+                molestias est atque aut? Ad illo expedita non quidem dolorum facere ipsam
+                eius corporis, reprehenderit maiores libero, laboriosam enim ab.
+                <button>Let´s talk</button>
+            </div>
+        </div>
+    </section>
+</div>
