--- a/src/app/landing-page/main-page/navbar/navbar.component.html
+++ b/src/app/landing-page/main-page/navbar/navbar.component.html
@@ -1,1 +1,20 @@
-<p>navbar works!</p>
+<header>
+    <div class="logo">
+      <img src="../../../../assets/icon/LOGO.png" alt="Logo">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Why me</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="language-switch">
+      <span>DE</span>
+      <div class="switch">
+        <span>EN</span>
+      </div>
+    </div>
+  </header>
+  
