--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,8 +16,7 @@ body{
 
   @font-face {
     font-family: 'JS';
-    src: url('./assets/fonts/Anta/Anta-Regular.ttf'),
-         url('./assets/fonts/Josefin_Sans/JosefinSans-Italic-VariableFont_wght.ttf');
+    src: url('./assets/fonts/Josefin_Sans/static/JosefinSans-Light.ttf');
     font-weight: normal;
     font-style: normal;
   }
