--- a/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.html
+++ b/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.html
@@ -1,36 +1,41 @@
 <header>
     <section>
         <div class="profil-Img">
-            <!-- Profilbild bleibt immer sichtbar -->
             <img src="../../../../assets/img/subject 3.png" alt="My Image" class="subject-img">
-            
-           
+
             <div class="shape-One"></div>
             <div class="shape-two"></div>
         </div>
 
-        <div class="logo-Name-Section">
-            <div class="logo-Section">
-                <span class="Logo">
-                    <img src="../../../../assets/icon/Logo icon1.png" alt="My-Logo" />
-                    <h3>M.Schneemann</h3>
-                    <h4>developer</h4>   
-                </span>
-                <span>
-                    <img src="" alt="E-Mail Icon">
-                    <img src="" alt="GitHub Icon">
-                    <img src="" alt="LinkdIn Icon">
-                </span>
+        <div class="logo-Name-section">
+            <div class="logo-section">
+                <div class="logo-container">
+                    <img class="logo-1" src="../../../../assets/icon/Logo icon1.png" alt="Logo-1">
+                    <img class="logo-2" src="../../../../assets/icon/Logo icon2.png" alt="Logo-2">
+                </div>
+
+                    <div class="titel-container">
+                        <h3>M.Schneemann</h3>
+                        <h4>developer</h4>
+                    </div>
+          
+                    <span class="contact-Icon">
+                        <img src="../../../../assets/icon/Email button.png" alt="E-Mail Icon">
+                        <img src="../../../../assets/icon/Github button.png" alt="GitHub Icon">
+                        <img src="../../../../assets/icon/Linkedin button.png" alt="LinkdIn Icon">
+                    </span>
             </div>
-  
+
+
+
             <div class="name-Section">
                 <h1>M.Schneemann</h1>
                 <h2>FRONTEND DEVELOPER</h2>
             </div>
-  
+
             <div class="scroll-Section">
                 <span>
-                    <img src="" alt="Scroll Icon">
+                    <img src="../../../../assets/icon/Arrow down.png" alt="Scroll Icon">
                 </span>
             </div>
         </div>
