--- a/src/app/landing-page/main-page/contact-me/contact-me.component.html
+++ b/src/app/landing-page/main-page/contact-me/contact-me.component.html
@@ -1,1 +1,100 @@
-<p>contact-me works!</p>
+<section id="contact">
+    <h2>Contact me</h2>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+    <p>contact-me works!</p>
+   
+    
+    
+</section>
