--- a/src/app/landing-page/main-page/about-me/about-me.component.html
+++ b/src/app/landing-page/main-page/about-me/about-me.component.html
@@ -1,16 +1,23 @@
-<div>
-    <section>
-        <h2 id="why-me">Why me</h2>
-        <div class="section-text">
-            <img src="../../../../assets/icon/icon1.png" alt="" />
-            <img src="" alt="">
-                <p> <span>I am</span> located in Stockach</p>
-            <div>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt vel
-                molestias est atque aut? Ad illo expedita non quidem dolorum facere ipsam
-                eius corporis, reprehenderit maiores libero, laboriosam enim ab.
-                <button>Let´s talk</button>
-            </div>
+<div class="about-me-content">
+  <section id="about-me">
+    <h2>Why me</h2>
+    <div class="section-text">
+      <div class="section-image">
+        <img src="../../../../assets/icon/icon1.png" alt="" />
+
+        <div class="located">
+          <p><span>I am </span> located in Stockach</p>
         </div>
-    </section>
+      </div>
+
+      <div class="about-me-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt vel
+        molestias est atque aut? Ad illo expedita non quidem dolorum facere
+        ipsam eius corporis, reprehenderit maiores libero, laboriosam enim ab.
+        <div class="button">
+          <button>Let´s talk</button>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
