--- a/src/app/landing-page/main-page/feedback/feedback.component.html
+++ b/src/app/landing-page/main-page/feedback/feedback.component.html
@@ -1,1 +1,16 @@
-<p>feedback works!</p>
+<h2>Need a teamplay? Here what my colleagues said about me</h2>
+
+<div class="overlay">
+  @for (person of people; track person.name) {
+  <div class="feedback-card">
+    <div class="feedback-card-one"></div>
+    <div class="feedback-card-two"></div>
+    <h3>{{ person.name }}</h3>
+    <h5><span> Project </span> {{ person.project }}</h5>
+    <div class="project-name">
+      <p>{{ person.text }}</p>
+    </div>
+    <a [href]="person.profileLink" target="_blank">LinkedIn Profile</a>
+  </div>
+  }
+</div>
