--- a/src/app/landing-page/main-page/main-page.component.html
+++ b/src/app/landing-page/main-page/main-page.component.html
@@ -1,9 +1,17 @@
-
 <app-above-the-fold></app-above-the-fold>
 
-
 <app-navbar></app-navbar>
+
 <app-about-me></app-about-me>
+
 <app-abilities></app-abilities>
+
 <app-my-projects></app-my-projects>
+
+<router-outlet></router-outlet>
+
+<app-feedback></app-feedback>
+
 <app-contact-me></app-contact-me>
+
+<app-footer></app-footer>
