--- a/src/app/landing-page/main-page/about-me/about-me.component.html
+++ b/src/app/landing-page/main-page/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div>
     <section>
-        <h2>Why me</h2>
+        <h2 id="why-me">Why me</h2>
         <div class="section-text">
             <img src="../../../../assets/icon/icon1.png" alt="" />
             <img src="" alt="">
