--- a/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.html
+++ b/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.html
@@ -1,12 +1,7 @@
 <header>
   <section>
     <div class="profil-Img">
-      <img
-        src="../../../../assets/img/subject-3.png"
-        alt="My Image"
-        class="subject-img"
-      />
-
+      <img src="../../../../assets/img/subject-3.png" alt="My Image"class="subject-img"/>
       <div class="shape-One"></div>
       <div class="shape-two"></div>
     </div>
