--- a/src/app/landing-page/main-page/navbar/navbar.component.html
+++ b/src/app/landing-page/main-page/navbar/navbar.component.html
@@ -1,20 +1,26 @@
-<header>
-    <div class="logo">
-      <img src="../../../../assets/icon/LOGO.png" alt="Logo">
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">Why me</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="language-switch">
-      <span>DE</span>
-      <div class="switch">
-        <span>EN</span>
+<div class="navbar" [ngClass]="{ 'fixed': isFixed, 'original': isOriginal }">
+  <div class="logo-section">
+    <div class="left-section">
+      <div class="logo-container">
+        <img class="logo-1" src="../../../../assets/icon/Logo icon-Dark.png" alt="Logo-1" />
+        <img class="logo-2" src="../../../../assets/icon/Logo icon-Dark 2.png" alt="Logo-2" />
+      </div>
+      <div class="titel-container">
+        <h3>M.Schneemann</h3>
+        <h4>developer</h4>
       </div>
     </div>
-  </header>
-  
+  </div>
+  <nav>
+    <p><a href="#why-me">Why me</a></p>
+    <p><a href="#">Skills</a></p>
+    <p><a href="#">Projects</a></p>
+    <p><a href="#">Contact</a></p>
+  </nav>
+  <div class="language-switch">
+    <span>DE</span>
+    <div class="switch">
+      <span>EN</span>
+    </div>
+  </div>
+</div>
