--- a/src/app/landing-page/main-page/navbar/navbar.component.scss
+++ b/src/app/landing-page/main-page/navbar/navbar.component.scss
@@ -1,63 +1,96 @@
-section{
-    background-color: #87B8DA;
-    font-family: 'Anta', sans-serif;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1222px;
+  height: 104px;
+  background-color: #89bcd9;
+  padding: 0 109px;
+  &.fixed {
+    position: fixed;
+    top: 0px;
+    left: 0;
+  }
+  &.original {
+    width: 1222px;
+    top: 683px;
+  }
 }
-
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 104px;
-    background-color: #87B8DA;
-    padding: 10px 20px;
-  
-    .logo {
-      display: flex;
-      align-items: center; 
-      img {
-        width: 40px;
-        height: auto;
-      }
-  
-      .text {
-        display: flex;
-        flex-direction: column;
-        line-height: 1.2;
-      }
-    }
-  
-    nav {
-      ul {
-        list-style: none;
-        display: flex;
-        gap: 20px;
-        margin: 0;
-        padding: 0;
-        background-color: #87B8DA;
-  
-        li {
-          a {
-            text-decoration: none;
-            color: black;
-            font-size: 26px;
-            font-weight: bold;
-          }
-        }
-      }
-    }
-  
-    .language-switch {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-      font-size: 14px;
-  
-      .switch {
-        background-color: white;
-        border-radius: 10px;
-        padding: 2px 8px;
-        font-weight: bold;
+.logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h3 {
+    font-size: 0.8rem;
+  }
+  h4 {
+    color: #262e34;
+    font-size: 0.9rem;
+  }
+}
+nav {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  p {
+    margin: 0;
+    a {
+      text-decoration: none;
+      font-family: "JS Medium";
+      color: #262e34;
+      font-size: 1.63rem;
+      &:hover {
+        text-decoration: underline;
       }
     }
   }
-  
+}
+.language-switch {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  .switch {
+    background-color: #fff;
+    border-radius: 999px;
+    padding: 0.2rem 0.6rem;
+    cursor: pointer;
+  }
+}
+.left-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  gap: 5px;
+}
+.logo-container {
+  position: relative;
+  width: 56px;
+  height: 38px;
+  .logo-1,
+  .logo-2 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: opacity 0.1s all;
+  }
+  .logo-1 {
+    opacity: 1;
+  }
+  .logo-2 {
+    opacity: 0;
+  }
+  &:hover {
+    .logo-1 {
+      opacity: 0;
+    }
+    .logo-2 {
+      opacity: 1;
+    }
+  }
+}
+.titel-container {
+  text-align: center;
+  margin-top: 8px;
+}
