--- a/src/app/landing-page/main-page/contact-me/contact-me.component.html
+++ b/src/app/landing-page/main-page/contact-me/contact-me.component.html
@@ -1,100 +1,19 @@
 <section id="contact">
-    <h2>Contact me</h2>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
-    <p>contact-me works!</p>
    
-    
+    <form (ngSubmit)="onSubmit()">
+
+        <label for="name">Name</label>
+        <input [(ngModel)]="contactData.name" type="text" id="name" name="name" placeholder="Your name..">
+
+        <label for="email">Your E-Mail</label>
+        <input [(ngModel)]="contactData.email" type="email" id="email" name="email"  placeholder="Your mail adress..">
+
+        <label for="message">Subject</label>
+        <textarea [(ngModel)]="contactData.message" name="message" id="message" placeholder="Write something.."></textarea>
+
+        <input type="submit" value="Submit">
+
+    </form>
+
     
 </section>
