--- a/src/app/landing-page/main-page/contact-me/contact-me.component.html
+++ b/src/app/landing-page/main-page/contact-me/contact-me.component.html
@@ -1,20 +1,21 @@
 <section id="contact">
    
     <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
-
-        <label for="name">Name</label>
-        <input [(ngModel)]="contactData.name" type="text" id="name" name="name" placeholder="Your name.." required>
-
-        <label for="email">Your E-Mail</label>
-        <input [(ngModel)]="contactData.email" type="email" id="email" name="email"  placeholder="Your mail adress.." required  pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" >
+        <div class="input-label">
+            
+                <label for="name">Your Name</label>
+                <input [(ngModel)]="contactData.name" type="text" id="name" name="name" required>
+            </div>
+            
+            <label for="email">Your Email</label>
+            <input [(ngModel)]="contactData.email" type="email" id="email" name="email" required  pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" >
 
         <label for="message">Subject</label>
         <textarea #message="ngModel" minlength="4" [(ngModel)]="contactData.message" name="message" id="message" placeholder="Write something.." required></textarea>
         @if (!message.value && message.touched && !message.disabled) {
             <span> Please enter a message </span>
         }
-
-        <input type="submit" value="Submit">
+        <button type="submit" value="Submit"> Submit </button>
 
     </form>
 
