--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,43 +1,3 @@
-* {
-  margin: 0;
-  scroll-behavior: smooth;
-}
-
-body {
-  background-color: #262e34;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  margin: 0;
-}
-h1 {
-  font-family: "Anta Regular";
-  font-size: 5.5rem;
-  color: #f8f5ec;
-  text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black,
-    -1px 1px 0 black;
-}
-h2 {
-  font-family: "JS Regular";
-  font-size: 2.5rem;
-  color: #f8f5ec;
-  text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black,
-    -1px 1px 0 black;
-}
-
-h3 {
-  font-family: "Anta Regular";
-  font-size: 1rem;
-  color: #f8f5ec;
-}
-
-h4 {
-  font-size: 1rem;
-  font-family: "JS Light";
-  color: #262e34;
-}
-
 //font family: Anta
 @font-face {
   font-family: "Anta Regular";
@@ -91,3 +51,54 @@ h4 {
   font-weight: normal;
   font-style: normal;
 }
+
+//font family: Quantico 
+@font-face{
+  font-family: "Quantico-Bold";
+  src: url("./assets/fonts/Roboto Mono/RobotoMono-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
+* {
+  margin: 0;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: #262e34;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+}
+h1 {
+  font-family: "Anta Regular";
+  font-size: 5.5rem;
+  color: #f8f5ec;
+  text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black,
+    -1px 1px 0 black;
+}
+h2 {
+  font-family: "JS Regular";
+  font-size: 2.5rem;
+  color: #f8f5ec;
+  text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black,
+    -1px 1px 0 black;
+}
+
+h3 {
+  font-family: "Anta Regular";
+  font-size: 1rem;
+  color: #f8f5ec;
+}
+
+h4 {
+  font-size: 1rem;
+  font-family: "JS Light";
+  color: #262e34;
+}
+
