--- a/src/app/landing-page/main-page/main-page.component.html
+++ b/src/app/landing-page/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<!-- <app-above-the-fold></app-above-the-fold> 
+<app-above-the-fold></app-above-the-fold> 
 
 <app-navbar></app-navbar>
 
@@ -10,7 +10,7 @@
 
 <router-outlet></router-outlet>
 
-<app-feedback></app-feedback> -->
+<app-feedback></app-feedback>
 
 <app-contact-me></app-contact-me>
 
