--- a/src/app/landing-page/main-page/contact-me/contact-me.component.html
+++ b/src/app/landing-page/main-page/contact-me/contact-me.component.html
@@ -1,3 +1,36 @@
+
+
+<h2>Contact Me</h2>
+
+<span *ngFor="let icon of contactIcons">
+  <img [src]="icon.current" (mouseenter)="onContactHover(icon.id)"(mouseleave)="onContactLeave(icon.id)" [alt]="icon.id + ' icon'"/>
+</span>
+
+<div>
+
+  <span>
+
+    Encourage people to contact you and describe what role you are interested in. Show that you will add value to their projects through your work. 
+    Example: Feel free to get in touch with job offers or opportunities such as: ...
+
+  </span>
+
+  <div>
+
+    <span>
+      <img src="../../../../assets/icon/Contact/contact_email.svg" alt="Email Icon">
+    </span>
+
+    <span>
+      <img src="../../../../assets/icon/Contact/contact_phone_.svg" alt="Phone Icon">
+    </span>
+
+  </div>
+
+</div>
+
+
+
 <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm" class="contact-form">
   <div class="form-row">
     <!-- NAME -->
